--- a/index.html
+++ b/index.html
@@ -3,17 +3,13 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="text/javascript">
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script type="text/jsx">
       const app = document.getElementById("app")
-
-      const header = document.createElement("h1")
-
-      const text = "React Foundations for Nextjs"
-      const headerContent = document.createTextNode(text)
-
-      header.appendChild(headerContent)
-
-      app.appendChild(header)
+      const root = ReactDOM.createRoot(app)
+      root.render(<h1>React Foundations for Nextjs</h1>)
     </script>
   </body>
 </html>
