--- a/index.html
+++ b/index.html
@@ -8,8 +8,22 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="text/jsx">
       const app = document.getElementById("app")
+
+      function Header() {
+        return (<h1>React Foundations for Nextjs</h1>)
+      }
+
+      function HomePage() {
+        return (
+          <div>
+            <Header />
+          </div>
+        )
+      }
+
       const root = ReactDOM.createRoot(app)
-      root.render(<h1>React Foundations for Nextjs</h1>)
+      root.render(<HomePage />)
+
     </script>
   </body>
 </html>
